# attoparsec-parsec

./: .ghci  .travis.yml  README.markdown  attoparsec-parsec.cabal
example/: Main.hs
src/Data/Attoparsec/Text/: Parsec.hs
test/: Spec.hs
test/Data/Attoparsec/Text/: ParsecSpec.hs
tests/: Spec.hs
