name:             attoparsec-parsec
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011, 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Parsing
synopsis:         An Attoparsec compatibility layer for Parsec

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , parsec >= 3.1.2
    , text
    , attoparsec
  exposed-modules:
      Data.Attoparsec.Text.Parsec

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base, attoparsec-parsec, text, hspec-shouldbe, QuickCheck
